--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+hr.or {
+  border: none;
+  border-top: 1px solid #7bce82;
+  color: #333;
+  overflow: visible;
+  text-align: center;
+  height: 5px;
+  margin: 1.6rem auto;
+  width: 100%;
+}
+
+hr.or::after {
+  background: #fff;
+  content: "または";
+  padding: 0 1.6rem;
+  position: relative;
+  top: -13px;
+}
